; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_tps51632-regulator.c_tps51632_dcdc_set_ramp_delay.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_tps51632-regulator.c_tps51632_dcdc_set_ramp_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.tps51632_chip = type { i32, i32 }

@TPS51632_SLEW_REGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"SLEW reg write failed, err %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*, i32)* @tps51632_dcdc_set_ramp_delay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tps51632_dcdc_set_ramp_delay(%struct.regulator_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.regulator_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tps51632_chip*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %9 = call %struct.tps51632_chip* @rdev_get_drvdata(%struct.regulator_dev* %8)
  store %struct.tps51632_chip* %9, %struct.tps51632_chip** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @DIV_ROUND_UP(i32 %14, i32 6000)
  %16 = sub nsw i32 %15, 1
  store i32 %16, i32* %6, align 4
  br label %17

17:                                               ; preds = %13, %12
  %18 = load %struct.tps51632_chip*, %struct.tps51632_chip** %5, align 8
  %19 = getelementptr inbounds %struct.tps51632_chip, %struct.tps51632_chip* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @TPS51632_SLEW_REGS, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @BIT(i32 %22)
  %24 = call i32 @regmap_write(i32 %20, i32 %21, i32 %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %33

27:                                               ; preds = %17
  %28 = load %struct.tps51632_chip*, %struct.tps51632_chip** %5, align 8
  %29 = getelementptr inbounds %struct.tps51632_chip, %struct.tps51632_chip* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @dev_err(i32 %30, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %31)
  br label %33

33:                                               ; preds = %27, %17
  %34 = load i32, i32* %7, align 4
  ret i32 %34
}

declare dso_local %struct.tps51632_chip* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @DIV_ROUND_UP(i32, i32) #1

declare dso_local i32 @regmap_write(i32, i32, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @dev_err(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
